<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/hint"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_header">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_header_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginStart="25dp"
            android:textColor="@color/hint"
            android:text="@string/h_register"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:inputType="text"
            android:backgroundTint="@color/tint"
            android:hint="@string/username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/tint"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:inputType="phone"
            android:backgroundTint="@color/tint"
            android:hint="@string/phoneNumber"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginStart="13dp"
            android:gravity="center"
            android:weightSum="10"
            android:layout_marginTop="12dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="5"
                android:textSize="14sp"
                android:textColor="@color/tint"
                android:buttonTint="@color/backgr"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="5"
                android:textSize="14sp"
                android:buttonTint="@color/backgr"
                android:textColor="@color/tint"
                android:text="@string/female"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/S_bloodType"
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:entries="@array/bloodtype"
                android:layout_weight="0.5"/>
            <Spinner
                android:id="@+id/S_reshus"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:entries="@array/reshus"
                android:layout_weight="0.5"/>

        </LinearLayout>
        <EditText
            android:id="@+id/edt_Password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:backgroundTint="@color/tint"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/edt_PasswordR"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/tint"
            android:textSize="14sp"
            android:hint="@string/Rpassword"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_marginStart="13dp"
            android:weightSum="10"
            android:layout_marginTop="15dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:layout_weight="5"
                android:textColor="@color/tint"
                android:buttonTint="@color/backgr"
                android:text="@string/personal"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:buttonTint="@color/backgr"
                android:layout_weight="5"
                android:textColor="@color/tint"
                android:text="@string/organization"/>
        </RadioGroup>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:entries="@array/job"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:backgroundTint="@color/tint"
            android:hint="@string/homeA"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:backgroundTint="@color/tint"
            android:hint="@string/dLoc"
            android:drawableEnd="@drawable/ic_blood_needed_location"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/tint"
            android:buttonTint="@color/backgr"
            android:text="@string/agree"/>
        <Button
            android:id="@+id/btn_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/backgr"
            android:text="@string/h_register"
            android:background="@drawable/button_register"/>
    </LinearLayout>
</LinearLayout>