<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgr"
    tools:context=".VerifyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/hint"
            android:textSize="35sp"
            android:layout_marginTop="150dp"
            android:text="@string/verifyaccount"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/hint"
            android:layout_marginTop="10dp"
            android:text="@string/whs"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/enterverf"
            android:gravity="center"
            android:backgroundTint="@color/hint"
            android:textColorHint="@color/hint"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send"
            android:textColor="@color/hint"
            android:background="@drawable/button_transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resendCode"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/hint"/>

    </LinearLayout>

</LinearLayout>