<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_welcome_logo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:backgroundTint="@color/hint"
        android:hint="@string/username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:backgroundTint="@color/hint"/>
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/hint"
        android:background="@drawable/button_transparent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/hint"
        android:text="@string/or"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_welcome_fb_login"
        android:text="@string/connect"
        android:textColor="@color/hint"
        android:background="@drawable/button_transparent"/>


    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@drawable/button_transparent">-->
        <!---->
    <!--</Button>    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/hint"
        android:text="@string/regis"/>
    </LinearLayout>


</LinearLayout>