<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    android:orientation="vertical"
    tools:context=".AlmostThereActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:text="@string/almost_thr"
            android:textColor="@color/hint"
            android:gravity="center"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="13sp"
            android:textColor="@color/hint"
            android:text="@string/thank"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_Verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/verify"
            android:textColor="@color/hint"
            android:background="@drawable/button_transparent"/>

    </LinearLayout>


</LinearLayout>